# torrent-organizer

./: .gitignore  README.rst  pyproject.toml
tests/: test_torrent_organizer.py
torrent_organizer/: config.py  exceptions.py  models.py  organize.py  utils.py
torrent_organizer/console/: run.py
